--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Telegram Video Stream Bot",
     "description": "An Telegram Bot By @ZauteKm To Stream Videos in Voice Chat",
-    "repository": "https://github.com/ZauteKm/VideoStreamBot/tree/master",
+    "repository": "https://github.com/Kresswell/VideoStreamBot/tree/master",
     "logo": "https://telegra.ph/file/117de96dbfbfea2ce59a6.png",
     "stack": "container",
     "keywords": [
@@ -59,7 +59,7 @@
     "formation": {
       "worker": {
         "quantity": 1,
-        "size": "free"
+        "size": "eco"
       }
     },
     "buildpacks": [
